--- a/Suramerica Results v2.2.ipynb
+++ b/Suramerica Results v2.2.ipynb
@@ -28,6 +28,7 @@
     "\n",
     "original = pd.read_csv(\"suramerica_absolute_total.csv\").drop(['Unnamed: 0'], 1)\n",
     "datos = pd.read_csv(\"suramerica.csv\").drop('Unnamed: 0', 1)\n",
+    "datos2 = pd.read_csv(\"suramerica.csv\").drop('Unnamed: 0', 1)\n",
     "\n",
     "paises = datos['CountryCode'].drop_duplicates().values.tolist()\n",
     "pais_nombre = 'Suramerica'\n",
