--- a/Suramerica Results v2.2.ipynb
+++ b/Suramerica Results v2.2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Suramerica Results v2.2"
+    "# Suramerica Results v2.2 Completado"
    ]
   },
   {
@@ -28,7 +28,7 @@
     "\n",
     "original = pd.read_csv(\"suramerica_absolute_total.csv\").drop(['Unnamed: 0'], 1)\n",
     "datos = pd.read_csv(\"suramerica.csv\").drop('Unnamed: 0', 1)\n",
-    "datos2 = pd.read_csv(\"suramerica.csv\").drop('Unnamed: 0', 1)\n",
+    "datos3 = pd.read_csv(\"suramerica.csv\").drop('Unnamed: 0', 1)\n",
     "\n",
     "paises = datos['CountryCode'].drop_duplicates().values.tolist()\n",
     "pais_nombre = 'Suramerica'\n",
